@@ -302,7 +302,7 @@ public class DateFieldDescription extends FieldDescription implements Serializab
       if (separator != null && separator.length() > 1) {
         throw new ExtendedIllegalArgumentException("separator (" + separator + ")", ExtendedIllegalArgumentException.LENGTH_NOT_VALID);
       }
-      Character sep = ( separator == null ? null : new Character(separator.charAt(0)));
+      Character sep = ( separator == null ? null : Character.valueOf(separator.charAt(0)));
       ((AS400Date)dataType_).setSeparator(sep);
     }
     dateSeparator_ = separator;
