@@ -83,7 +83,7 @@ implements IFSRandomAccessFileImpl
     try {
       return (IFSKey) connection_.callMethod (pxId_, "lock",
                               new Class[] { Long.TYPE, Long.TYPE },
-                              new Object[] { new Long(offset), new Long(length) })
+                              new Object[] { Long.valueOf(offset), Long.valueOf(length) })
                         .getReturnValue();
     }
     catch (InvocationTargetException e) {
@@ -119,18 +119,16 @@ implements IFSRandomAccessFileImpl
                                                  Integer.TYPE,
                                                  Boolean.TYPE},
                                    new Object[] { data,
-                                                  new Integer (dataOffset),
-                                                  new Integer (length),
-                                                  new Boolean (readFully) },
+                                                  Integer.valueOf(dataOffset),
+                                                  Integer.valueOf(length),
+                                                  Boolean.valueOf(readFully) },
                                    ARGS_TO_RETURN, readFully );
       // Note: The 6th arg says whether to call the method asynchronously.
       // In the case of readFully, we want asynchronous, since the read
       // will wait for the requested number of bytes to become available.
 
       byte [] returnDataBuffer = (byte[])rv.getArgument(0);
-      for (int i=0; i<data.length; i++) {
-        data[i] = returnDataBuffer[i];
-      }
+      System.arraycopy(returnDataBuffer, 0, data, 0, data.length);
       return rv.getReturnValueInt();
     }
     catch (InvocationTargetException e) {
@@ -166,7 +164,7 @@ implements IFSRandomAccessFileImpl
     try {
       connection_.callMethod (pxId_, "setExistenceOption",
                               new Class[] { Integer.TYPE },
-                              new Object[] { new Integer(existenceOption) });
+                              new Object[] { Integer.valueOf(existenceOption) });
     }
     catch (InvocationTargetException e) {
       throw ProxyClientConnection.rethrow (e);
@@ -192,7 +190,7 @@ implements IFSRandomAccessFileImpl
     try {
       connection_.callMethod (pxId_, "setForceToStorage",
                               new Class[] { Boolean.TYPE },
-                              new Object[] { new Boolean(forceToStorage) });
+                              new Object[] { Boolean.valueOf(forceToStorage) });
     }
     catch (InvocationTargetException e) {
       throw ProxyClientConnection.rethrow (e);
@@ -206,7 +204,7 @@ implements IFSRandomAccessFileImpl
     try {
       connection_.callMethod (pxId_, "setLength",
                               new Class[] { Long.TYPE },
-                              new Object[] { new Long(length) });
+                              new Object[] { Long.valueOf(length) });
     }
     catch (InvocationTargetException e) {
       throw ProxyClientConnection.rethrow1 (e);
@@ -249,8 +247,8 @@ implements IFSRandomAccessFileImpl
     try {
       connection_.callMethod (pxId_, "writeBytes",
                               new Class[] { byte[].class, Integer.TYPE, Integer.TYPE },
-                              new Object[] { data, new Integer(dataOffset),
-                                             new Integer(length) });
+                              new Object[] { data, Integer.valueOf(dataOffset),
+                                             Integer.valueOf(length) });
     }
     catch (InvocationTargetException e) {
       throw ProxyClientConnection.rethrow1 (e);
