@@ -449,7 +449,7 @@ extends SQLDataBase
     throws SQLException
     {
         truncated_ = 0; outOfBounds_ = false; 
-        return new Double(value_);
+        return Double.valueOf(value_);
     }
 
     public short getShort()
@@ -521,6 +521,6 @@ extends SQLDataBase
     // @array
     
     public void saveValue() {
-      savedValue_ = new Double(value_); 
+      savedValue_ = Double.valueOf(value_); 
    }
 }
